# pai-cli

./: .gitignore  README.md  install.sh  pyproject.toml
docs/investigations/: account-data-trace.md  pai-cli-status-readiness.md
src/pai/: __init__.py  main.py
src/pai/agents/: __init__.py  base.py  catalog.py  claude.py  codex.py  copilot.py  gemini.py  vibe.py
src/pai/billing/: __init__.py  pricing.py  pricing_cmd.py  report.py
src/pai/billing/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/pai/commands/: __init__.py  agent_filters.py  cache.py  doctor.py  history.py  identity.py  messages.py  plans.py  sessions.py  setup.py  stats.py  sync.py
src/pai/common/: accounts.py  cache.py  formatting.py  identity_config.py  identity_ingest.py  identity_store.py  paths.py  types.py
